--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>Vue Vixens - Workshops for Foxy People to Learn Vue.js</title>
     <!--<link rel="stylesheet" href="./dist/main.css">-->
+    <script type="text/javascript" src="//app.storyblok.com/f/storyblok-latest.js"></script>
   </head>
   <body>
     <div id="app"></div>
