* added editable properties & metas to events; fixed Connect.Tech date

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <meta name="msapplication-config" content="img/icons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="Vue Vixens are foxy people who identify as women and who want to learn Vue.js to make websites and mobile apps"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <script type="text/javascript" src="//app.storyblok.com/f/storyblok-latest.js"></script>
 </head>
 <body>
