--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>Vue Vixens - Workshops for Foxy People to Learn Vue.js</title>
     <!--<link rel="stylesheet" href="./dist/main.css">-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <script type="text/javascript" src="//app.storyblok.com/f/storyblok-latest.js"></script>
   </head>
   <body>
