--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <title>Vue Vixens - Workshops for Foxy People to Learn Vue.js</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
-  <link rel="manifest" href="img/icons/site.webmanifest">
-  <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="img/icons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+  <link rel="manifest" href="/img/icons/site.webmanifest">
+  <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/img/icons/favicon.ico">
   <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="msapplication-config" content="img/icons/browserconfig.xml">
+  <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="Vue Vixens are foxy people who identify as women and who want to learn Vue.js to make websites and mobile apps"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
